Docs: fix layout shifting on dialog open

--- a/packages/dev/docs/src/docs.css
+++ b/packages/dev/docs/src/docs.css
@@ -126,6 +126,14 @@
   font-family: "adobe-clean-serif",sans-serif;
 }
 
+:root {
+  overflow-y:scroll !important;
+}
+
+html {
+  padding-right: 0 !important;
+}
+
 html, body {
   margin: 0;
   text-size-adjust: none;
